tests/ui/short_circuit_statement.stderr
error: boolean short circuit operator in statement may be clearer using an explicit test
 --> $DIR/short_circuit_statement.rs:7:5
  |
7 |     f() && g();
  |     ^^^^^^^^^^^ help: replace it with `if f() { g(); }`
  |
note: lint level defined here
 --> $DIR/short_circuit_statement.rs:4:9
  |
4 | #![deny(short_circuit_statement)]
  |         ^^^^^^^^^^^^^^^^^^^^^^^

error: boolean short circuit operator in statement may be clearer using an explicit test
 --> $DIR/short_circuit_statement.rs:8:5
  |
8 |     f() || g();
  |     ^^^^^^^^^^^ help: replace it with `if !f() { g(); }`

error: boolean short circuit operator in statement may be clearer using an explicit test
 --> $DIR/short_circuit_statement.rs:9:5
  |
9 |     1 == 2 || g();
  |     ^^^^^^^^^^^^^^ help: replace it with `if !(1 == 2) { g(); }`

error: aborting due to 3 previous errors

